--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 Contáctanos con gusto uno de nuestros especialistas te brindará la atención personalizada que mereces.</p>
                 <div class="text-muted">
                     
-                    <p><span class="ti-email pr-3"></span>info@website.com</p>
+                    <p><span class="ti-email pr-3"></span>mensajes@expressdiezmil.com</p>
                 </div>
             </div>
         </div>
